# aoc2024

./: .envrc  .gitignore  aoc2024.opam  dune-project  init.sh  run.sh  validate.sh
day01/: day01.ml  dune  main.ml  run.sh
day02/: day02.ml  dune
day03/: day03.ml  dune
day04/: day04.ml  dune  run.sh
day05/: dune  main.ml
day06/: dune  main.ml
day07/: dune  main.ml
day08/: dune  main.ml
day09/: dune  main.ml
day10/: dune  main.ml
day11/: dune  main.ml
day12/: dune  main.ml
day13/: dune  main.ml  run.sh
day14/: dune  main.ml
day15/: dune  main.ml
day16/: dune  main.ml
day17/: dune  main.ml
day18/: dune  main.ml
day19/: dune  main.ml
day20/: dune  main.ml
day21/: dune  main.ml
day22/: dune  main.ml
day23/: dune  main.ml
day24/: dune  main.ml
day25/: dune  main.ml
template/: dune  main.ml
tools/: dune  tools.ml  tools.mli
